[tool.poetry]
name = "sdk"
version = "0.1.0"
description = ""
authors = ["Paul <dev@studiop.page>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.24"
python-dotenv = "^0.19.2"
b2 = "^3.1.0"
python-gnupg = "^0.4.8"
rdiff-backup = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
pylint = "^2.12.2"
moto = {extras = ["s3"], version = "^2.2.19"}
rarfile = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
